<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="AmeClientParam" Id="{f772db41-d81e-4cd0-ac59-dcb3a131d27f}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	udiMSG_SIZE	:UDINT	:= 1000;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>