<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="St_Assy_SetParametricsAndNCNative" Id="{e71de676-3cfc-45b7-8b27-0c4c3c7d7525}">
    <Declaration><![CDATA[TYPE St_Assy_SetParametricsAndNCNative EXTENDS St_Assy_Base :
STRUCT
	sProgramId			:STRING;
	sProgramRevision	:STRING;
	sTestStep			:STRING;
	sDescription		:STRING;
	sValue				:STRING;
	sUnit				:STRING;
	sLowerLimit			:STRING;
	sUpperLimit			:STRING;
	sState				:STRING;
	sAdapter			:STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>