<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="St_Assy_Start" Id="{cd666f9e-edd1-4aad-b2aa-742730efb3b0}">
    <Declaration><![CDATA[TYPE St_Assy_Start EXTENDS St_Assy_Base :
STRUCT
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>